First Phil Alone

--- a/site/config/settings.json
+++ b/site/config/settings.json
@@ -1,5 +1,5 @@
 {
 	"title": "FA/YSDN 1006 - Winter 2018",
 	"domain": "https://yorkdesign.github.io/YSDN1006-W18",
-	"root": "/YSDN1006-W18/"
+	"root": "/YSDN2005-F17/"
 }
